--- a/styles/base/typography.css
+++ b/styles/base/typography.css
@@ -24,4 +24,31 @@ h4 {
 
 a {
   text-decoration: none;
+  color: var(--neutral-dark);
+  font-weight: bold;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.2rem;
+}
+
+h3 {
+  font-size: 2.8rem;
+}
+h4 {
+  font-size: 2.4rem;
 }
