--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -2,16 +2,8 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid red;
+  border: 1px solid rgb(0, 0, 0);
   display: flex;
-
-  aside {
-    border: 3px solid purple;
-  }
-
-  section {
-    border: 3px solid red;
-  }
 }
 
 .uti_padding {
