--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -1,13 +1,14 @@
 header {
   display: flex;
   flex-direction: column;
+  margin-bottom: 3rem;
 
   nav {
     width: 100%;
     display: flex;
     align-items: center;
     gap: 3rem;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.345);
     padding: 1rem 3rem;
 
     .logo img {
