--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -26,7 +26,7 @@ header {
 .hero-section {
   width: 100%;
   min-height: 300px;
-  background: #f9afb16d;
+  background: var(--brand-light);
 
   .hero-container-wrapp {
     max-width: 1280px;
