--- a/styles/components/colors.css
+++ b/styles/components/colors.css
@@ -8,7 +8,7 @@
 .colors-row {
   display: flex;
   gap: 3rem;
-  margin: 4rem 0;
+  margin: 1rem 0;
 }
 
 .box {
@@ -24,6 +24,11 @@
   .color {
     width: 110px;
     height: 60px;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    justify-content: center;
   }
 }
 
@@ -53,4 +58,27 @@
 
 .error {
   background: var(--func-error);
+}
+
+.acce-primary {
+  background: var(--accent-primary);
+}
+.acce-secondary {
+  background: var(--accent-secondary);
+}
+.acce-tertiary {
+  background: var(--accent-tertiary);
+}
+.acce-quaternary {
+  background: var(--accent-quaternary);
+}
+
+.neu-dark {
+  background: var(--neutral-dark);
+}
+.neu-medium {
+  background: var(--neutral-medium);
+}
+.neu-light {
+  background: var(--neutral-light);
 }
