--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -1,17 +1,11 @@
-.wrapper {
-  max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  padding: 0 2rem;
-}
-
 .section_title {
   padding-bottom: 10px;
   border-bottom: 1px solid gray;
   margin-bottom: 5rem;
 }
 
-.section_padding {
-  padding-bottom: 5rem;
+.section_format {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem 4rem;
 }
