--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -1,42 +1,25 @@
 header {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10rem;
+  padding: 1rem 0;
+  width: 100%;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.345);
 
-  nav {
-    width: 100%;
+  .header-wrapp {
     display: flex;
+    max-width: 1280px;
     align-items: center;
-    gap: 3rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.345);
-    padding: 1rem 3rem;
-
-    .logo img {
-      width: 30px;
-      cursor: pointer;
-    }
-
-    p {
-      font-weight: bold;
-      cursor: pointer;
-    }
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    padding: 0 4rem;
   }
 }
 
-.hero-section {
-  width: 100%;
-  min-height: 300px;
-  background: var(--brand-light);
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  .hero-container-wrapp {
-    max-width: 1280px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    height: 300px;
-    gap: 2rem;
+  img {
+    width: 40px;
   }
 }
