--- a/styles/base/typography.css
+++ b/styles/base/typography.css
@@ -2,17 +2,14 @@ html {
   font-size: 62.5%;
 }
 
-p {
-  margin: 0;
-  padding: 0;
-}
-
 h1,
 h2,
 h3,
 h3,
-h4 {
+h4,
+p {
   margin: 0;
+  line-height: 1;
   padding: 0;
 }
 
@@ -24,7 +21,6 @@ a {
 
 body {
   font-family: "Open Sans", sans-serif;
-  font-style: normal;
   font-size: 1.6rem;
 }
 
