--- a/styles/components/typography.css
+++ b/styles/components/typography.css
@@ -1,11 +1,4 @@
-.typography-section {
-  h4 {
-    margin-bottom: 2rem;
-  }
-}
-
-.block {
-  margin: 10rem 0;
+.typography-wrapp {
 }
 
 .intro .allura {
