--- a/styles/base/utilities.css
+++ b/styles/base/utilities.css
@@ -2,12 +2,15 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1280px;
-  padding: 5rem 0;
+  padding: 5rem 3rem;
 }
 
 .section_title_utility {
+  margin-bottom: 5rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.345);
+  padding-bottom: 2rem;
 }
 
 .sub_section_title_utility {
-  background: red;
+  margin-bottom: 3rem;
 }
