--- a/styles/components/nagivation.css
+++ b/styles/components/nagivation.css
@@ -1,6 +1,3 @@
-nav {
-}
-
 .nav-links {
   display: flex;
   align-items: center;
@@ -14,5 +11,15 @@ nav {
   li a:hover {
     border-bottom: 3px solid var(--brand);
     transition: all 0.3s ease;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .logo {
+    width: 100%;
+  }
+
+  nav {
+    display: none;
   }
 }
