--- a/styles/base/typography.css
+++ b/styles/base/typography.css
@@ -33,7 +33,7 @@ body {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: clamp(5rem, 10vw, 7rem);
   font-family: "Allura", cursive;
   font-weight: bold;
 }
@@ -47,16 +47,16 @@ h6 {
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: clamp(3rem, 5vw, 4rem);
   font-weight: bold;
 }
 
 h3 {
-  font-size: 3.5rem;
+  font-size: clamp(2rem, 5vw, 3.5rem);
 }
 
 h4 {
-  font-size: 2.2rem;
+  font-size: clamp(1.6rem, 5vw, 2.2rem);
   font-weight: normal;
 }
 
