--- a/styles/components/visualization.css
+++ b/styles/components/visualization.css
@@ -2,11 +2,19 @@
   width: 100%;
 }
 
-/* Details of Scatter Plot */
+/* ? Details of Scatter Plot */
 .circle {
   fill: #ff4d52; /* Color de los círculos */
 }
 .axis-label {
   font-size: 14px;
   font-weight: bold;
+}
+
+/* ? Details of line chart stacked */
+
+@media (max-width: 780px) {
+  .graph-box {
+    max-width: 100%; /* Make it full width on smaller screens */
+  }
 }
