--- a/styles/components/components.css
+++ b/styles/components/components.css
@@ -3,7 +3,7 @@
 }
 
 .code {
-  width: 90%;
+  width: 100%;
   max-width: 850px;
   margin-top: 2rem;
   border: 1px solid #a0a0a0;
@@ -18,7 +18,7 @@
   border: 1px solid #a0a0a0;
   border-radius: 8px;
   padding: 2rem;
-  width: 90%;
+  width: 100%;
   max-width: 500px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -73,79 +73,35 @@
 }
 
 /* COMPONENT 2 - BUTTONS */
-.button-xs {
+
+.btn-sample {
   padding: 0.25rem 0.5rem;
-  font-size: 12px;
   background-color: #ed1c24;
   color: white;
   font-weight: 600;
-  border-radius: 0.375rem;
-  transition: background-color 0.15s ease-in-out;
   outline: none;
+  border-radius: 0.375rem;
 }
 
-.button-xs:hover {
-  background-color: #ff4d52;
+.button-xs {
+  font-size: 12px;
 }
 
 .button-sm {
-  padding: 0.25rem 0.5rem;
   font-size: 16px;
-  background-color: #ed1c24;
-  color: white;
-  font-weight: 600;
-  border-radius: 0.375rem;
-  transition: background-color 0.15s ease-in-out;
-  outline: none;
-}
-
-.button-sm:hover {
-  background-color: #ff4d52;
 }
 
 .button-md {
-  padding: 0.375rem 0.625rem;
   font-size: 20px;
-  background-color: #ed1c24;
-  color: white;
-  font-weight: 600;
-  border-radius: 0.375rem;
-  transition: background-color 0.15s ease-in-out;
-  outline: none;
-}
-
-.button-md:hover {
-  background-color: #ff4d52;
+  margin-bottom: 2rem;
 }
 
 .button-lg {
-  padding: 0.5rem 0.75rem;
   font-size: 24px;
-  background-color: #ed1c24;
-  color: white;
-  font-weight: 600;
-  border-radius: 0.375rem;
-  transition: background-color 0.15s ease-in-out;
-  outline: none;
-}
-
-.button-lg:hover {
-  background-color: #ff4d52;
 }
 
 .button-xl {
-  padding: 0.625rem 0.875rem;
   font-size: 28px;
-  background-color: #ed1c24;
-  color: white;
-  font-weight: 600;
-  border-radius: 0.375rem;
-  transition: background-color 0.15s ease-in-out;
-  outline: none;
-}
-
-.button-xl:hover {
-  background-color: #ff4d52;
 }
 
 /* COMPONENT 3 - INPUT */
