Working on the dashboard charts

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 @import url(components/buttons.css);
 @import url(components/colors.css);
 @import url(components/components.css);
+@import url(components/dashboard.css);
 @import url(components/hero.css);
 @import url(components/layout.css);
 @import url(components/typography.css);
