--- a/styles/components/dashboard.css
+++ b/styles/components/dashboard.css
@@ -5,6 +5,7 @@
   max-width: 100%;
   margin: 0.5rem 0;
   padding: 0.5rem 0;
+  position: relative;
 }
 
 .dashboard-chart-box {
@@ -31,4 +32,93 @@
   width: 100%;
   max-width: 415px;
   display: flex;
+}
+
+/* Estilo para el dropdown */
+#color-dropdown {
+  position: absolute;
+  left: 55%;
+  top: 50px;
+  font-family: Arial, sans-serif;
+}
+
+.dropdown-toggle {
+  background-color: #4d52ff;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  font-size: 14px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.dropdown-toggle:hover {
+  background-color: #3a3ecc;
+}
+
+.dropdown-menu {
+  display: none; /* Oculto por defecto */
+  position: absolute;
+  top: 100%; /* Aparece debajo del botón */
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  padding: 5px 0;
+}
+
+.dropdown-item {
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  border: none;
+  background: none;
+  text-align: left;
+  width: 100%;
+}
+
+.dropdown-item:hover {
+  background-color: #f0f0f0;
+}
+
+/* Mostrar el menú cuando se hace clic */
+.dropdown.active .dropdown-menu {
+  display: block;
+}
+
+.data-dropdown {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 2px solid #ff4d52; /* Borde de color personalizado */
+  background-color: #fff;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+/* Estilo cuando el select es enfocado */
+.data-dropdown:focus {
+  border-color: #ff4d52;
+  box-shadow: 0 0 5px rgba(255, 77, 82, 0.5);
+}
+
+/* Estilo de las opciones dentro del select */
+.data-dropdown option {
+  font-size: 16px;
+  padding: 10px;
+  background-color: #fff;
+  color: #333;
+  border: none;
+  cursor: pointer;
+}
+
+/* Cambio de color de las opciones cuando se pasa el ratón */
+.data-dropdown option:hover {
+  background-color: #f1f1f1;
 }
