--- a/styles/components/dashboard.css
+++ b/styles/components/dashboard.css
@@ -1,3 +1,22 @@
+main {
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+}
+
+.data-wrapp {
+  border: 5px solid rgb(0, 255, 68);
+  max-width: 950px;
+  margin: 0;
+}
+
+aside {
+  border: 5px solid rgb(43, 0, 255);
+  display: flex;
+  justify-content: center;
+  min-width: 300px;
+}
+
 .dasboard-ui-row {
   flex-wrap: wrap;
   display: flex;
@@ -11,7 +30,7 @@
 .dashboard-chart-box {
   overflow: hidden;
   flex-direction: column;
-  border-radius: 5px;
+  border-radius: 15px;
   padding: 2rem 1rem;
   background: white;
 }
@@ -37,7 +56,7 @@
 /* Estilo para el dropdown */
 #color-dropdown {
   position: absolute;
-  left: 55%;
+  left: 75%;
   top: 50px;
   font-family: Arial, sans-serif;
 }
