--- a/styles/components/dashboard.css
+++ b/styles/components/dashboard.css
@@ -19,13 +19,14 @@ main {
   display: flex;
   gap: 2rem;
   max-width: 100%;
-  margin: 0.5rem 0;
+  margin: 1rem 0;
   padding: 0.5rem 0;
   position: relative;
 }
 
 .dashboard-chart-box {
   overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.037);
   flex-direction: column;
   border-radius: 15px;
   padding: 2rem 1rem;
@@ -138,7 +139,19 @@ main {
 *************Requirement list*************
 ******************************************/
 aside {
+  max-width: 300px;
   display: flex;
   justify-content: center;
-  min-width: 300px;
+}
+
+.requirement-wrapper {
+  height: min-content;
+  width: 100%;
+  padding: 2rem 1rem;
+  background: white;
+  margin-top: 195px;
+  position: sticky;
+  border-radius: 15px;
+  top: 50px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.037);
 }
