--- a/styles/components/dashboard.css
+++ b/styles/components/dashboard.css
@@ -6,6 +6,14 @@ main {
   justify-content: center;
 }
 
+.identifier {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 1rem;
+  color: #33333354;
+}
+
 /******************************************
 ************Dashboard container************
 ******************************************/
@@ -31,6 +39,7 @@ main {
   border-radius: 15px;
   padding: 2rem 1rem;
   background: white;
+  position: relative;
 }
 
 /* Styles for the 3 different charts containers */
@@ -57,14 +66,13 @@ main {
 }
 
 .dropdown-toggle {
-  background-color: #4d52ff;
-  color: #fff;
+  background: #fafafa;
   border: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 10px 15px;
   font-size: 14px;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
 }
 
@@ -97,10 +105,10 @@ main {
 
 /* Styles for the Line chart double value chart */
 .data-dropdown {
-  color: #fff;
   border: none;
-  background: #4d52ff;
+  background: #fafafa;
   padding: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   border-radius: 5px;
   cursor: pointer;
@@ -115,6 +123,20 @@ main {
   cursor: pointer;
   outline: none;
 }
+
+.tooltip {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 12px;
+  pointer-events: none; /* Evita que interfiera con el mouse */
+  opacity: 0; /* Ocultar por defecto */
+  transition: opacity 0.2s ease-in-out;
+}
+
 /* Styles for the horizontal bar chart */
 
 /******************************************
