--- a/styles/components/dashboard.css
+++ b/styles/components/dashboard.css
@@ -50,7 +50,8 @@
 /* ^ Chart 3  */
 .dashboard-ui-row-categories-chart,
 .dashboard-ui-row-satisfaction-chart,
-.dashboard-ui-row-class-chart {
+.dashboard-ui-row-class-chart,
+.dashboard-ui-row-stacked-chart {
   background-color: white; /* Fondo blanco */
   border: 1px solid rgba(0, 0, 0, 0.093); /* Borde de 1px negro */
   padding: 2rem 1rem; /* Padding de 1rem */
