--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,14 +1,27 @@
 .hero {
+  position: relative;
   height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 5rem;
   padding: 0 2rem;
+  overflow: hidden;
+}
 
-  .hero-illustration img {
-    width: 350px;
-  }
+#hero-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.hero-illustration img {
+  width: 350px;
 }
 
 @media screen and (max-width: 780px) {
