--- a/styles/main.css
+++ b/styles/main.css
@@ -63,3 +63,12 @@ figure {
   margin: 0;
   padding: 0;
 }
+
+.parallax {
+  background-image: url('../assets/images/sky.png');
+  height: 200px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
